# sretools

./: .gitignore  CODE_WIKI.md  COMPLETE_GUIDE.md  FEASIBILITY_REPORT_FINAL.md  GRPC_INTEGRATION_GUIDE.md  GRPC_MIGRATION_FINAL_REPORT.md  GRPC_POC_SUMMARY.md  PROJECT_SUMMARY.md  README.md  amisadmin.db  gateway_python_dev_guide.md  generate_grpc_code.py  poc_test.py  pyproject.toml  real_grpc_poc.py  simple_poc.py  test_grpc_integration.py
.trae/documents/: adapter_module_plan.md  data_transformation_plan.md  logging_implementation_plan.md  logging_optimization_plan.md  worker_directory_refactoring_plan.md  清理worker-collector目录计划.md
grpc_impl/: README.md  client.py  generate_code.py  server.py  test_grpc.py  worker.proto  worker_pb2.py  worker_pb2_grpc.py
master/: amisadmin.db  main.py
master/core/: __init__.py  auth.py  globals.py  logging.py  security.py  settings.py
master/gateway/: __init__.py
master/grpc/: server.py  worker_pb2.py  worker_pb2_grpc.py
master/index/: admin.py  file_upload_admin.py  models.py  utils.py
master/templates/: app.html  page.html
master/worker/: routes.py
protos/: worker.proto
scripts/: deploy.sh  generate_grpc_code.py  start.sh  stop.sh
tests/: gateway_smoke.py  test_gateway.py  test_server.py
tests/grpc/: README.md  __init__.py  test_grpc_complete.py  test_grpc_integration.py
tests/worker/: test_import.py  test_worker_initialization.py  test_worker_start_stop.py
worker/: README.md  main.py  run.sh
worker/adapter/: __init__.py  base.py  clickhouse_adapter.py  http_adapter.py  influxdb_adapter.py  kafka_adapter.py  redis_adapter.py  sql_adapter.py
worker/collector/: log_collector.py
worker/communicator/: central_client.py
worker/core/: auth.py  settings.py
worker/grpc/: client.py  worker_pb2.py  worker_pb2_grpc.py
worker/metrics/: metric_converter.py
(+78 files in other folders)
