[project]
name = "sretools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi==0.111.0",
    "fastapi-amis-admin>=0.7.3",
    "fastapi-user-auth>=0.7.3",
    "greenlet>=3.3.2",
    "pydantic-settings>=2.13.1",
    "requests>=2.33.1",
    "sqlmodel==0.0.19",
    "sqlmodelx==0.0.12",
    "websockets>=12.0",
]


[tool.ruff.format]
line-length = 88
tab-width = 4
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = []

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
extra-index-url = ["https://pypi.tuna.tsinghua.edu.cn/simple"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]
