[project]
name = "sretools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "aiosqlite>=0.22.1",
    "asynch>=0.2.0",
    "fastapi==0.111.0",
    "fastapi-amis-admin>=0.7.3",
    "fastapi-user-auth>=0.7.3",
    "greenlet>=3.3.2",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "influxdb-client>=1.40.0",
    "protobuf>=4.25.0",
    "pydantic-settings>=2.13.1",
    "redis>=5.0.0",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.0",
    "sqlmodel==0.0.19",
    "sqlmodelx==0.0.12",
    "croniter>=2.0.0",
    "websockets>=12.0",
]


[tool.ruff.format]
line-length = 88
tab-width = 4
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = []

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
extra-index-url = ["https://pypi.tuna.tsinghua.edu.cn/simple"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]
